--- a/products.html
+++ b/products.html
@@ -1,67 +1,41 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Products - PADMA APP</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Our Products</h1>
-  <section>
-    <h2>HSFG Nut & Bolt</h2>
-    <p>High Strength Friction Grip bolts used in structural steel connections, ideal for bridge and high-load structures.</p>
-    <img src="images/hsfg_bolt.jpg" alt="HSFG Nut & Bolt" width="300">
-  </section>
-  <section>
-    <h2>Bridge Bearings</h2>
-    <p>Support vertical loads and accommodate horizontal movement in bridges. Includes Elastomeric and Pot PTFE types.</p>
-    <img src="images/bridge_bearing.jpg" alt="Bridge Bearings" width="300">
-  </section>
-  <section>
-    <h2>Survey Equipment</h2>
-    <p>Essential instruments for precise land and structure mapping, including Total Stations and Theodolites.</p>
-    <img src="images/survey_equipment.jpg" alt="Survey Equipment" width="300">
-  </section>
-  <section>
-    <h2>Safety Equipment</h2>
-    <p>Protective gear including helmets, vests, and harnesses to ensure worker safety on-site.</p>
-    <img src="images/safety_equipment.jpg" alt="Safety Equipment" width="300">
-  </section>
-  <section>
-    <h2>Steel and TMT Bars</h2>
-    <p>Reinforcement bars used in concrete for added strength and durability in construction.</p>
-    <img src="images/tmt_bars.jpg" alt="Steel and TMT Bars" width="300">
-  </section>
-  <section>
-    <h2>Cement</h2>
-    <p>High-quality cement for all types of structural and civil engineering applications.</p>
-    <img src="images/cement.jpg" alt="Cement" width="300">
-  </section>
-  <section>
-    <h2>Excavator</h2>
-    <p>Heavy machinery used for digging, earthmoving, and foundation preparation.</p>
-    <img src="images/excavator.jpg" alt="Excavator" width="300">
-  </section>
-  <section>
-    <h2>Steel CC Grips</h2>
-    <p>Steel grips used for safe and strong staging in bridge construction.</p>
-    <img src="images/cc_grips.jpg" alt="Steel CC Grips" width="300">
-  </section>
-  <section>
-    <h2>Earth Compactor Roller</h2>
-    <p>Used to compact soil and asphalt layers, crucial for road and bridge foundation work.</p>
-    <img src="images/compactor.jpg" alt="Earth Compactor Roller" width="300">
-  </section>
-  <section>
-    <h2>Civil Engineer Doing Survey</h2>
-    <p>Field engineer assessing site parameters for accurate project planning and execution.</p>
-    <img src="images/engineer_survey.jpg" alt="Civil Engineer Survey" width="300">
-  </section>
-  <section>
-    <h2>Construction Laborers on Bridge</h2>
-    <p>Skilled laborers working on site to construct bridges and infrastructure.</p>
-    <img src="images/laborers_bridge.jpg" alt="Construction Laborers" width="300">
-  </section>
+  <header><h1>Our Products</h1></header>
+  
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About Us</a></li>
+    <li><a href="products.html">Products</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
+  <main>
+    <section class="highlights">
+      <div class="card"><h3>HSFG Nut & Bolt</h3><p>Used in structural connections for bridges, ensuring high load-bearing capacity.</p></div>
+      <div class="card"><h3>Bridge Bearings</h3><p>Support bridge movement and transfer load to the substructure.</p></div>
+      <div class="card"><h3>Survey Equipment</h3><p>Instruments like Total Stations and Levels used for site analysis.</p></div>
+      <div class="card"><h3>Safety Equipment</h3><p>Helmets, jackets, and boots for on-site personnel protection.</p></div>
+      <div class="card"><h3>Steel and TMT Bars</h3><p>Reinforcement material essential for concrete strength and durability.</p></div>
+      <div class="card"><h3>Cement</h3><p>High-grade cement for all civil construction applications.</p></div>
+      <div class="card"><h3>Excavator</h3><p>Heavy machinery for digging and site preparation.</p></div>
+      <div class="card"><h3>Steel CC Grips</h3><p>Used in bridge staging to ensure safe construction platforms.</p></div>
+      <div class="card"><h3>Earth Compactor Roller</h3><p>Ensures compact ground base before laying roads or structures.</p></div>
+      <div class="card"><h3>Civil Engineer Doing Survey</h3><p>Visual representation of professionals assessing construction parameters.</p></div>
+      <div class="card"><h3>Construction Laborers on Bridge</h3><p>Showcasing hands-on labor work during bridge construction phases.</p></div>
+    </section>
+  </main>
+  <footer>
+    <p>Contact: Kamal Agarwal | +91-98540-90923 | padmaapp25@gmail.com</p>
+  </footer>
 </body>
 </html>
