--- a/about.html
+++ b/about.html
@@ -1,31 +1,41 @@
-
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html lang="en">
 <head>
-  <title>About Us - PADMA APP</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us | PADMA APP</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-  <header><h1>About Us</h1></header>
-  
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About Us</a></li>
-    <li><a href="products.html">Products</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+<body style="background-color: #f5f5f5; font-family: Arial, sans-serif;">
+  <header style="background-color: #004080; color: white; padding: 1rem; text-align: center;">
+    <img src="assets/images/logo.png" alt="Padma App Logo" style="height: 60px; vertical-align: middle;">
+    <h1 style="display: inline-block; margin-left: 1rem; vertical-align: middle;">PADMA APP</h1>
+  </header>  <main style="padding: 2rem;">
+    <h2>About Us</h2>
+    <p>PADMA APP was founded with a commitment to deliver excellence in infrastructure development. With a strong team and a focus on quality, integrity, and timely delivery, we provide top-notch civil construction products and services including bridge bearings, steel bridges, expansion joints, and more.</p><h3>Our Vision</h3>
+<p>To be a leading name in infrastructure and civil construction, known for innovation, quality, and environmental responsibility.</p>
 
-  <main>
-    <div class="card">
-      <p>PADMA APP is a trusted partner in civil infrastructure, supplying quality construction materials and executing civil and bridge projects across India under the leadership of Kamal Agarwal.</p>
-    </div>
-  </main>
-  <footer>
-    <p>Contact: Kamal Agarwal | +91-98540-90923 | padmaapp25@gmail.com</p>
+<h3>Our Mission</h3>
+<p>To provide reliable, efficient, and sustainable construction materials and services that add long-term value to infrastructure development.</p>
+
+<h3>Our Core Values</h3>
+<ul>
+  <li>Integrity and Transparency</li>
+  <li>Customer Satisfaction</li>
+  <li>Timely Delivery</li>
+  <li>Eco-Friendly Practices</li>
+  <li>Commitment to Excellence</li>
+</ul>
+
+<h3>Our Team</h3>
+<ul>
+  <li><strong>Mr. Shishir Srivastava</strong> – Technical Head (Bridge), 18 yrs experience</li>
+  <li><strong>Mr. Prashant Sharma</strong> – Designer, 8 yrs experience</li>
+  <li><strong>Mr. Vipin Kumar</strong> – Plant Head, 12 yrs experience</li>
+  <li><strong>Mr. Naeem Khan</strong> – Production Manager, 16 yrs experience</li>
+</ul>
+
+  </main>  <footer style="background-color: #004080; color: white; text-align: center; padding: 1rem;">
+    &copy; 2025 PADMA APP. All Rights Reserved.
   </footer>
 </body>
 </html>
