--- a/about.html
+++ b/about.html
@@ -28,11 +28,7 @@
 
 <h3>Our Team</h3>
 <ul>
-  <li><strong>Mr. Shishir Srivastava</strong> – Technical Head (Bridge), 18 yrs experience</li>
-  <li><strong>Mr. Prashant Sharma</strong> – Designer, 8 yrs experience</li>
-  <li><strong>Mr. Vipin Kumar</strong> – Plant Head, 12 yrs experience</li>
-  <li><strong>Mr. Naeem Khan</strong> – Production Manager, 16 yrs experience</li>
-</ul>
+  <li><strong>Mr. Kamal Agarwal</strong> – Technical Head (Bridge Works, Construction & MS Steel Fabrication ), 15 yrs experience</li>  
 
   </main>  <footer style="background-color: #004080; color: white; text-align: center; padding: 1rem;">
     &copy; 2025 PADMA APP. All Rights Reserved.
