--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
 <h3>Our Team</h3>
 <ul>
-  <li><strong>Mr. Kamal Agarwal</strong> – Technical Head (Bridge Works, Construction & MS Steel Fabrication ), 15 yrs experience</li>  
+  <li><strong>Mr. Kamal Agarwal</strong> – Our Founder (Specialist in ridge Works, Construction & MS Steel Fabrication ), 15 yrs experience</li>  
 
   </main>  <footer style="background-color: #004080; color: white; text-align: center; padding: 1rem;">
     &copy; 2025 PADMA APP. All Rights Reserved.
