--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,28 +10,34 @@
   <header style="background-color: #004080; color: white; padding: 1rem; text-align: center;">
     <img src="assets/images/logo.png" alt="Padma App Logo" style="height: 60px; vertical-align: middle;">
     <h1 style="display: inline-block; margin-left: 1rem; vertical-align: middle;">PADMA APP</h1>
-  </header>  <main style="padding: 2rem;">
+  </header>
+
+  <main style="padding: 2rem;">
     <h2>About Us</h2>
-    <p>PADMA APP was founded with a commitment to deliver excellence in infrastructure development. With a strong team and a focus on quality, integrity, and timely delivery, we provide top-notch civil construction products and services including bridge bearings, steel bridges, expansion joints, and more.</p><h3>Our Vision</h3>
-<p>To be a leading name in infrastructure and civil construction, known for innovation, quality, and environmental responsibility.</p>
+    <p>PADMA APP was founded with a commitment to deliver excellence in infrastructure development. With a strong team and a focus on quality, integrity, and timely delivery, we provide top-notch civil construction products and services including bridge bearings, steel bridges, expansion joints, and more.</p>
 
-<h3>Our Mission</h3>
-<p>To provide reliable, efficient, and sustainable construction materials and services that add long-term value to infrastructure development.</p>
+    <h3>Our Vision</h3>
+    <p>To be a leading name in infrastructure and civil construction, known for innovation, quality, and environmental responsibility.</p>
 
-<h3>Our Core Values</h3>
-<ul>
-  <li>Integrity and Transparency</li>
-  <li>Customer Satisfaction</li>
-  <li>Timely Delivery</li>
-  <li>Eco-Friendly Practices</li>
-  <li>Commitment to Excellence</li>
-</ul>
+    <h3>Our Mission</h3>
+    <p>To provide reliable, efficient, and sustainable construction materials and services that add long-term value to infrastructure development.</p>
 
-<h3>Our Team</h3>
-<ul>
-  <li><strong>Mr. Kamal Agarwal</strong> – Our Founder (Specialist in ridge Works, Construction & MS Steel Fabrication ), 15 yrs experience</li>  
+    <h3>Our Core Values</h3>
+    <ul>
+      <li>Integrity and Transparency</li>
+      <li>Customer Satisfaction</li>
+      <li>Timely Delivery</li>
+      <li>Eco-Friendly Practices</li>
+      <li>Commitment to Excellence</li>
+    </ul>
 
-  </main>  <footer style="background-color: #004080; color: white; text-align: center; padding: 1rem;">
+    <h3>Our Founder</h3>
+    <ul>
+      <li><strong>Mr. Kamal Agarwal</strong> – Vast Experience & Expertise in Govt.Infrastructure Projects with (RCC Bridges, Steel BUG Bridges, Steel Fabrication, PSC Bridges, RC Culverts , RCC & STELL STRUCTURES , Tendering , Construction Materials, Labour Contracts), 16 yrs experience</li>
+    </ul>
+  </main>
+
+  <footer style="background-color: #004080; color: white; text-align: center; padding: 1rem;">
     &copy; 2025 PADMA APP. All Rights Reserved.
   </footer>
 </body>
