--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 
     <h3>Our Founder</h3>
     <ul>
-      <li><strong>Mr. Kamal Agarwal</strong> – Vast Experience & Expertise in Govt.Infrastructure Projects with (RCC Bridges, Steel BUG Bridges, Steel Fabrication, PSC Bridges, RC Culverts , RCC & STELL STRUCTURES , Tendering , Construction Materials, Labour Contracts), 16 yrs experience</li>
+      <li><strong>Mr. Kamal Agarwal</strong> – Vast Experience & Expertise in Govt.Infrastructure Projects with (Project Management Consultant PMC in RCC Bridges, Steel BUG Bridges, Steel Fabrication, PSC Bridges, RC Culverts , RCC & STELL STRUCTURES , Tendering , Construction Materials,Surveying, Labour Contracts), 16 yrs experience</li>
     </ul>
   </main>
 
