--- a/gallery.html
+++ b/gallery.html
@@ -1,56 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Gallery - PADMA APP</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    .gallery-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      padding: 2rem;
-    }
-    .gallery-grid img {
-      width: 100%;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-    }
-    .gallery-caption {
-      text-align: center;
-      margin-top: 0.5rem;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-  <header><h1>Project Gallery</h1></header>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-  <main>
-    <div class="gallery-grid">
-      <div><img src="https://via.placeholder.com/300x200?text=HSFG+Bolts"><div class="gallery-caption">HSFG Bolts</div></div>
-      <div><img src="https://via.placeholder.com/300x200?text=Bridge+Bearings"><div class="gallery-caption">Bridge Bearings</div></div>
-      <div><img src="https://via.placeholder.com/300x200?text=Survey+Equipment"><div class="gallery-caption">Survey Equipment</div></div>
-      <div><img src="https://via.placeholder.com/300x200?text=Safety+Equipment"><div class="gallery-caption">Safety Equipment</div></div>
-      <div><img src="https://via.placeholder.com/300x200?text=TMT+Bars"><div class="gallery-caption">TMT Bars</div></div>
-      <div><img src="https://via.placeholder.com/300x200?text=Cement"><div class="gallery-caption">Cement</div></div>
-      <div><img src="https://via.placeholder.com/300x200?text=Excavator"><div class="gallery-caption">Excavator</div></div>
-      <div><img src="https://via.placeholder.com/300x200?text=CC+Grips"><div class="gallery-caption">CC Grips</div></div>
-      <div><img src="https://via.placeholder.com/300x200?text=Compactor+Roller"><div class="gallery-caption">Compactor Roller</div></div>
-      <div><img src="https://via.placeholder.com/300x200?text=Civil+Engineer"><div class="gallery-caption">Civil Engineer</div></div>
-      <div><img src="https://via.placeholder.com/300x200?text=Laborers+on+Bridge"><div class="gallery-caption">Laborers on Bridge</div></div>
-    </div>
-  </main>
-  <footer>
-    <p>Contact: Kamal Agarwal | +91-98540-90923 | padmaapp25@gmail.com</p>
-  </footer>
-</body>
-</html>
+<html><head><title>Gallery</title></head><body><h1>Gallery</h1><p>Images will be displayed here.</p></body></html>
