--- a/index.html
+++ b/index.html
@@ -1,51 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PADMA APP | Civil Construction Materials</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PADMA APP</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
+    <img src="logo.png" alt="Padma App Logo" class="logo" />
     <h1>PADMA APP</h1>
+    <p class="tagline">One Stop Solution for All Your Construction Materials & Services</p>
   </header>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
   <main>
     <section class="hero">
-      <h2>Reliable Partner in Civil Infrastructure</h2>
-      <p>Supplying materials, offering engineering consultancy, and executing PWD projects across India.</p>
+      <h2>Welcome to PADMA APP</h2>
+      <p>Your trusted partner in infrastructure and construction excellence.</p>
     </section>
-    <section class="highlights">
-      <div class="card">
-        <h3>Construction Materials</h3>
-        <p>HSFG Bolts, TMT Bars, Bearings, Expansion Joints, Survey and Safety Equipment.</p>
-      </div>
-      <div class="card">
-        <h3>Bridge Services</h3>
-        <p>Bridge construction, rehabilitation, expansion joint replacement, bearing installation.</p>
-      </div>
-      <div class="card">
-        <h3>Expert Consultancy</h3>
-        <p>PWD certified consultants with deep experience in civil engineering.</p>
+    <section class="testimonials">
+      <h3>Client Testimonials</h3>
+      <div class="testimonial-slider">
+        <p>"Excellent materials and timely delivery!" – Tashi Lhamu, Arunachal Pradesh</p>
+        <p>"Reliable and professional service." – Nima Tamang, Sikkim</p>
+        <p>"Top-quality products!" – Meghraj Basumatary, Assam</p>
       </div>
     </section>
   </main>
-  <div class="testimonial-marquee">
-    <p>"Excellent service and high-quality products!" - Rakesh Doley | "Trusted team and on-time delivery." - Ngathingkhui Zimik | "Professional support!" - Tashi Dorjee</p>
-  </div>
   <footer>
-    <p>Contact: Kamal Agarwal | +91-98540-90923 | padmaapp25@gmail.com</p>
     <p>&copy; 2025 PADMA APP. All rights reserved.</p>
   </footer>
 </body>
