--- a/contact.html
+++ b/contact.html
@@ -1,45 +1,15 @@
-
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Contact Us - PADMA APP</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+<head><title>Contact</title></head>
 <body>
-  <header><h1>Contact Us</h1></header>
-  
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About Us</a></li>
-    <li><a href="products.html">Products</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
-
-  <main>
-    <div class="card">
-      <form action="https://formspree.io/f/mwkgrbpg" method="POST">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br><br>
-
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="_replyto" required><br><br>
-
-        <label for="phone">Phone:</label><br>
-        <input type="text" id="phone" name="phone"><br><br>
-
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message" rows="4" required></textarea><br><br>
-
-        <button type="submit">Submit</button>
-      </form>
-    </div>
-  </main>
-  <footer>
-    <p>Contact: Kamal Agarwal | +91-98540-90923 | padmaapp25@gmail.com</p>
-  </footer>
+<h1>Contact Us</h1>
+<form action="https://formspree.io/f/your-form-id" method="POST">
+  <label for="name">Name:</label><br />
+  <input type="text" name="name" required /><br />
+  <label for="email">Email:</label><br />
+  <input type="email" name="_replyto" required /><br />
+  <label for="message">Message:</label><br />
+  <textarea name="message" required></textarea><br />
+  <button type="submit">Send</button>
+</form>
 </body>
 </html>
