--- a/products.html
+++ b/products.html
@@ -1,59 +1,1 @@
-<!DOCTYPE html><html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Products | PADMA APP</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body style="background-color: #f5f5f5; font-family: Arial, sans-serif;">
-  <header style="background-color: #004080; color: white; padding: 1rem; text-align: center;">
-    <img src="assets/images/logo.png" alt="Padma App Logo" style="height: 60px; vertical-align: middle;">
-    <h1 style="display: inline-block; margin-left: 1rem; vertical-align: middle;">PADMA APP</h1>
-  </header>  <main style="padding: 2rem;">
-    <h2>Our Products</h2><section style="margin-bottom: 2rem;">
-  <h3>Bridge Bearings</h3>
-  <p>We supply Pot PTFE, Elastomeric, Rocker-Roller, and Pin Bearings designed for durability and smooth load transfer in bridge structures.</p>
-  <img src="assets/images/bridge-bearing.jpg" alt="Bridge Bearing" style="width: 100%; max-width: 600px;">
-</section>
-
-<section style="margin-bottom: 2rem;">
-  <h3>Steel Bridges</h3>
-  <p>Offering various types like Girder, Truss, Composite, and Arch Bridges, fabricated for structural integrity and cost-effective construction.</p>
-  <img src="assets/images/steel-bridge.jpg" alt="Steel Bridge" style="width: 100%; max-width: 600px;">
-</section>
-
-<section style="margin-bottom: 2rem;">
-  <h3>Expansion Joints</h3>
-  <p>Our range includes Strip Seal, Modular, and Monolithic joints that accommodate movement, temperature variation, and seismic activity.</p>
-  <img src="assets/images/expansion-joint.jpg" alt="Expansion Joint" style="width: 100%; max-width: 600px;">
-</section>
-
-<section style="margin-bottom: 2rem;">
-  <h3>Drainage Spout</h3>
-  <p>Engineered to efficiently manage water runoff from bridges and elevated roads, preventing water damage and erosion.</p>
-  <img src="assets/images/drainage-spout.jpg" alt="Drainage Spout" style="width: 100%; max-width: 600px;">
-</section>
-
-<section style="margin-bottom: 2rem;">
-  <h3>Spherical Bearings</h3>
-  <p>These bearings handle large angular rotations in bridges, providing low friction and high load capacity.</p>
-  <img src="assets/images/spherical-bearing.jpg" alt="Spherical Bearing" style="width: 100%; max-width: 600px;">
-</section>
-
-<section style="margin-bottom: 2rem;">
-  <h3>Foot Over Bridges</h3>
-  <p>Custom-designed steel FOBs suitable for urban pedestrian infrastructure, ensuring safety and longevity.</p>
-  <img src="assets/images/foot-over-bridge.jpg" alt="Foot Over Bridge" style="width: 100%; max-width: 600px;">
-</section>
-
-<section style="margin-bottom: 2rem;">
-  <h3>Bridge Rehabilitation Products</h3>
-  <p>We also offer jacketing, shotcreting, epoxy grouting, and other structural repair products to restore aging infrastructure.</p>
-  <img src="assets/images/rehabilitation.jpg" alt="Bridge Rehabilitation" style="width: 100%; max-width: 600px;">
-</section>
-
-  </main>  <footer style="background-color: #004080; color: white; text-align: center; padding: 1rem;">
-    &copy; 2025 PADMA APP. All Rights Reserved.
-  </footer>
-</body>
-</html>
+<html><head><title>Products</title></head><body><h1>Our Products</h1><p>Product descriptions will be added.</p></body></html>
