--- a/services.html
+++ b/services.html
@@ -1,1 +1,37 @@
-<html><head><title>Services</title></head><body><h1>Our Services</h1><p>Service details go here.</p></body></html>
+<!DOCTYPE html><html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Services | PADMA APP</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body style="background-color: #f5f5f5; font-family: Arial, sans-serif;">
+  <header style="background-color: #004080; color: white; padding: 1rem; text-align: center;">
+    <img src="assets/images/logo.png" alt="Padma App Logo" style="height: 60px; vertical-align: middle;">
+    <h1 style="display: inline-block; margin-left: 1rem; vertical-align: middle;">PADMA APP</h1>
+  </header>  <main style="padding: 2rem;">
+    <h2>Our Services</h2><section style="margin-bottom: 2rem;">
+  <h3>Bridge Construction</h3>
+  <p>We undertake the construction of steel bridges including girder, truss, and composite types, adhering to top engineering and safety standards.</p>
+</section>
+
+<section style="margin-bottom: 2rem;">
+  <h3>Structural Rehabilitation</h3>
+  <p>Our rehabilitation services include epoxy grouting, jacketing, shotcreting, and guniting to strengthen and extend the life of existing infrastructure.</p>
+</section>
+
+<section style="margin-bottom: 2rem;">
+  <h3>Expansion Joint and Bearing Replacement</h3>
+  <p>We offer expert replacement services for worn-out expansion joints and bridge bearings, ensuring structural continuity and movement control.</p>
+</section>
+
+<section style="margin-bottom: 2rem;">
+  <h3>Survey and Civil Support</h3>
+  <p>Our team provides survey equipment and skilled civil engineers to conduct precise land assessments and layout for bridge and road projects.</p>
+</section>
+
+  </main>  <footer style="background-color: #004080; color: white; text-align: center; padding: 1rem;">
+    &copy; 2025 PADMA APP. All Rights Reserved.
+  </footer>
+</body>
+</html>
