--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,45 @@
-<html><head><title>Gallery</title></head><body><h1>Gallery</h1><p>Images will be displayed here.</p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gallery | PADMA APP</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+      padding: 2rem;
+    }
+    .gallery img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 0 10px #ccc;
+    }
+  </style>
+</head>
+<body style="background-color: #f5f5f5; font-family: Arial, sans-serif;">
+  <header style="background-color: #004080; color: white; padding: 1rem; text-align: center;">
+    <img src="assets/images/logo.png" alt="Padma App Logo" style="height: 60px; vertical-align: middle;">
+    <h1 style="display: inline-block; margin-left: 1rem; vertical-align: middle;">PADMA APP</h1>
+  </header>
+
+  <main>
+    <h2 style="text-align: center; margin: 2rem 0;">Project Gallery</h2>
+    <div class="gallery">
+      <img src="assets/images/gallery1.jpg" alt="Bridge Construction">
+      <img src="assets/images/gallery2.jpg" alt="Bridge Bearing Installation">
+      <img src="assets/images/gallery3.jpg" alt="Expansion Joint Work">
+      <img src="assets/images/gallery4.jpg" alt="Steel Bridge Fabrication">
+      <img src="assets/images/gallery5.jpg" alt="On-site Engineering Survey">
+      <img src="assets/images/gallery6.jpg" alt="Bridge Rehab Work">
+    </div>
+  </main>
+
+  <footer style="background-color: #004080; color: white; text-align: center; padding: 1rem;">
+    &copy; 2025 PADMA APP. All Rights Reserved.
+  </footer>
+</body>
+</html>
