--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,65 @@
-<html>
-<head><title>Contact</title></head>
-<body>
-<h1>Contact Us</h1>
-<form action="https://formspree.io/f/your-form-id" method="POST">
-  <label for="name">Name:</label><br />
-  <input type="text" name="name" required /><br />
-  <label for="email">Email:</label><br />
-  <input type="email" name="_replyto" required /><br />
-  <label for="message">Message:</label><br />
-  <textarea name="message" required></textarea><br />
-  <button type="submit">Send</button>
+<!DOCTYPE html><html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us | PADMA APP</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    form {
+      max-width: 600px;
+      margin: auto;
+      background: #fff;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 0 10px #ccc;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 0.75rem;
+      margin: 0.5rem 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      background-color: #004080;
+      color: white;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #002b5e;
+    }
+  </style>
+</head>
+<body style="background-color: #f5f5f5; font-family: Arial, sans-serif;">
+  <header style="background-color: #004080; color: white; padding: 1rem; text-align: center;">
+    <img src="assets/images/logo.png" alt="Padma App Logo" style="height: 60px; vertical-align: middle;">
+    <h1 style="display: inline-block; margin-left: 1rem; vertical-align: middle;">PADMA APP</h1>
+  </header>  <main style="padding: 2rem;">
+    <h2 style="text-align: center;">Contact Us</h2>
+    <form action="https://formspree.io/f/mayvlblg" method="POST">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" required><label for="email">Email</label>
+  <input type="email" id="email" name="email" required>
+
+  <label for="message">Message</label>
+  <textarea id="message" name="message" rows="6" required></textarea>
+
+  <button type="submit">Send Message</button>
 </form>
+
+<div style="text-align: center; margin-top: 2rem;">
+  <h3>Contact Details</h3>
+  <p>Email: @padmaapp25@gmail.com</p>
+  <p>Phone: +91 98540 90923</p>
+  <p>Address: Guwahati, Assam, India</p>
+  <p><a href="assets/catalogue.pdf" download style="color: #004080; font-weight: bold;">Download Our Catalogue (PDF)</a></p>
+</div>
+
+  </main>  <footer style="background-color: #004080; color: white; text-align: center; padding: 1rem;">
+    &copy; 2025 PADMA APP. All Rights Reserved.
+  </footer>
 </body>
 </html>
